--- a/app/src/main/res/layout/activity_bajnoksag.xml
+++ b/app/src/main/res/layout/activity_bajnoksag.xml
@@ -59,18 +59,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageButton3"
+        android:layout_alignParentLeft="true"
         app:srcCompat="@android:drawable/alert_dark_frame"
         android:layout_marginTop="60dp"
-        android:layout_marginRight="60dp"
-
+        android:layout_marginLeft="60dp"
         android:id="@+id/imageButton5" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         app:srcCompat="@android:drawable/alert_dark_frame"
-        android:layout_alignTop="@+id/imageButton5"
-        android:layout_alignRight="@+id/imageButton4"
-        android:layout_alignEnd="@+id/imageButton4"
+        android:layout_below="@+id/imageButton4"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="60dp"
         android:id="@+id/imageButton6" />
 </RelativeLayout>
