--- a/app/src/main/res/layout/activity_bajnoksag.xml
+++ b/app/src/main/res/layout/activity_bajnoksag.xml
@@ -34,7 +34,7 @@
         android:layout_marginEnd="60dp"
         android:layout_marginTop="60dp"
         android:id="@+id/imageButton2" />
-
+//asdasdasdasdasdasdasd
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
