--- a/app/src/main/res/layout/activity_main_listitem.xml
+++ b/app/src/main/res/layout/activity_main_listitem.xml
@@ -1,35 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        style="@style/ListTitle"
         android:text="TextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView6"
-        android:layout_weight="3" />
+        android:id="@+id/textView3"
+        android:layout_gravity="center" />
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView5"
-        android:layout_weight="5" />
-
-    <Button
-        android:text="L"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button5"
-        android:layout_weight="1"
-        android:minWidth="0dp" />
-
-    <Button
-        android:text="T"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button4"
-        android:layout_weight="1"
-        android:minWidth="0dp" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="760dp"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="10"
+        android:id="@+id/editText2" />
 </LinearLayout>
