--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,27 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="ListTitle">
+        <item name= "android:textColor">@color/ColorZebraFront</item>
+        <item name= "android:textStyle">bold</item>
+        <item name= "android:textSize">35sp</item>
+    </style>
+
+
+    <style name="ListText">
+        <item name="android:textColor">@color/ColorZebraFront</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="FlagsLeft">
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_marginRight">100dp</item>
+    </style>
+    <style name="FlagsRight">
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">60dp</item>
+    </style>
+
 </resources>
